[maven-plugin] Add option to use direct Java data-types #181